@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,20 +23,18 @@
 
 import static jdk.internal.util.OperatingSystem.LINUX;
 import static jdk.internal.util.OperatingSystem.MACOS;
+import static jdk.jpackage.test.JPackageCommand.DEFAULT_VERSION;
 import static jdk.jpackage.test.TKit.assertFalse;
 import static jdk.jpackage.test.TKit.assertTrue;
 
-import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Objects;
 import java.util.function.Predicate;
-import jdk.jpackage.internal.util.function.ThrowingSupplier;
+import java.util.function.Supplier;
 import jdk.jpackage.test.Annotations.Parameter;
 import jdk.jpackage.test.Annotations.Test;
-import jdk.jpackage.test.Executor;
 import jdk.jpackage.test.JPackageCommand;
-import jdk.jpackage.test.JavaTool;
 import jdk.jpackage.test.LinuxHelper;
 import jdk.jpackage.test.MacHelper;
 import jdk.jpackage.test.PackageTest;
@@ -84,12 +82,26 @@ public class RuntimePackageTest {
 
     @Test
     public static void test() {
-        init().run();
+        init()
+        .addInitializer(cmd -> {
+            // JDK-8357404 enables jpackage to pick a version from the "release" file
+            // of the predefined runtime when bundling the runtime package.
+            // This makes the output of this test dependent on the version of the running JDK
+            // and will be an inconvenience for SQE testing.
+            // Explicitly specify the package version to fulfill expectations of SQE.
+            cmd.setArgumentValue("--app-version", DEFAULT_VERSION);
+        })
+        .run();
     }
 
     @Test(ifOS = MACOS)
     public static void testFromBundle() {
-        init(RuntimePackageTest::createInputRuntimeBundle).run();
+        init(() -> {
+            return MacHelper.buildRuntimeBundle().mutator(cmd -> {
+                // Set custom version in the Info.plist file of the predefined runtime bundle.
+                cmd.addArguments("--app-version", "17.52");
+            }).create();
+        }).run();
     }
 
     @Test(ifOS = LINUX)
@@ -114,10 +126,10 @@ public class RuntimePackageTest {
     }
 
     private static PackageTest init() {
-        return init(RuntimePackageTest::createInputRuntimeImage);
+        return init(JPackageCommand::createInputRuntimeImage);
     }
 
-    private static PackageTest init(ThrowingSupplier<Path> createRuntime) {
+    private static PackageTest init(Supplier<Path> createRuntime) {
         Objects.requireNonNull(createRuntime);
 
         final Path[] runtimeImageDir = new Path[1];
@@ -167,59 +179,5 @@ public class RuntimePackageTest {
             }
         }
         return path;
-    }
-
-    private static Path createInputRuntimeImage() throws IOException {
-
-        final Path runtimeImageDir;
-
-        if (JPackageCommand.DEFAULT_RUNTIME_IMAGE != null) {
-            runtimeImageDir = JPackageCommand.DEFAULT_RUNTIME_IMAGE;
-        } else {
-            runtimeImageDir = TKit.createTempDirectory("runtime-image").resolve("data");
-
-            new Executor().setToolProvider(JavaTool.JLINK)
-                    .dumpOutput()
-                    .addArguments(
-                            "--output", runtimeImageDir.toString(),
-                            "--add-modules", "java.desktop",
-                            "--strip-debug",
-                            "--no-header-files",
-                            "--no-man-pages")
-                    .execute();
-        }
-
-        return runtimeImageDir;
-    }
-
-    private static Path createInputRuntimeBundle() throws IOException {
-
-        final var runtimeImage = createInputRuntimeImage();
-
-        final var runtimeBundleWorkDir = TKit.createTempDirectory("runtime-bundle");
-
-        final var unpackadeRuntimeBundleDir = runtimeBundleWorkDir.resolve("unpacked");
-
-        var cmd = new JPackageCommand()
-                .useToolProvider(true)
-                .ignoreDefaultRuntime(true)
-                .dumpOutput(true)
-                .setPackageType(PackageType.MAC_DMG)
-                .setArgumentValue("--name", "foo")
-                .addArguments("--runtime-image", runtimeImage)
-                .addArguments("--dest", runtimeBundleWorkDir);
-
-        cmd.execute();
-
-        MacHelper.withExplodedDmg(cmd, dmgImage -> {
-            if (dmgImage.endsWith(cmd.appInstallationDirectory().getFileName())) {
-                Executor.of("cp", "-R")
-                        .addArgument(dmgImage)
-                        .addArgument(unpackadeRuntimeBundleDir)
-                        .execute(0);
-            }
-        });
-
-        return unpackadeRuntimeBundleDir;
     }
 }
